=== 
2012-09-25: Add fancybox for light slideshow experience, while allowing saving individual images